--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -1,5 +1,5 @@
 /* Загальний стиль для контейнера */
-.container {
+.timer-container {
   display: flex;
   flex-direction: column;
   align-items: center;
