--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -1,21 +1,16 @@
-/* Загальний стиль для контейнера */
 .timer-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
+  margin: 50px auto;
   padding: 20px;
   max-width: 600px;
   background-color: #f9f9f9;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  font-family: 'Arial', sans-serif;
 }
 
-.main-title {
-  margin-bottom: 20px;
-}
 .datetime-picker-container {
   display: flex;
   align-items: flex-start;
